--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "aws-iot-device-sdk": "^1.0.11",
     "get-pixels": "^3.3.0",
+    "lodash": "^4.11.1",
     "rpi-ws2801": "^0.0.4",
     "spi": "^0.2.0"
   },
