--- a/package.json
+++ b/package.json
@@ -7,13 +7,9 @@
     "aws-iot-device-sdk": "^1.0.11",
     "get-pixels": "^3.3.0",
     "lodash": "^4.11.1",
-    "rpi-ws2801": "^0.0.4",
-    "spi": "^0.2.0"
+    "rpi-ws2801": "^0.0.4"
   },
   "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/SWoskowiak/ledStrip.git"
